--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,37 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
-</view>
+<div class="container">
+    <section class="card-container">
+        <article class="card card-place-holder">
+          卡片已见底
+        </article>
+      
+        <article class="card"
+            wx:for="{{slideList}}"
+            wx:key="{{item.id}}"
+            animation="{{item.animationData}}"
+            bindtouchmove="touchmove"
+            bindtouchend="touchend"
+            bindtouchstart="touchstart">
+            <header class="img-container">
+                <image class="img" mode="aspectFill" src="https://mmbiz.qpic.cn/mmbiz_png/wDK6CibcOhhMfM2uRLLRDHh52vA6hGkxByib4ucNMjcNmdbiavTznr0r5VY76Y8AdH69uuE5ktRZMCP6XlnwSVSXw/0?wx_fmt=png"></image>
+                <span class="img-tag iconfont icon-img">3</span>
+                <div class="user-info-container">
+                    <div class="name">{{item.text}}</div>
+                    <div class="info">
+                        <span>百度交互设计师</span>
+                        <span>1km</span>
+                    </div>
+                </div>
+            </header>
+            <footer class="text-container">
+                <div class="sub">我的知识</div>
+                <div class="title ellipsis">撒旦法大商股份</div>
+                <div class="content line-clamp">内容设定好三个地方，大沙发发奋，昂的发送到爱的色放，阿斯顿噶撒旦法，是点击发撒旦规范，啊设定好集阿什顿规范就按第三方</div>
+            </footer>
+        </article>
+    </section>
+    <section class="btn-container">
+        <div class="btn iconfont icon-close" bindtap="slideLeft"></div>
+        <div class="btn iconfont icon-handshake" bindtap="slideRight"></div>
+    </section>
+</div>
