添加获取手机号获取功能

--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,4 +1,7 @@
 <!--index.wxml-->
 <div class="container">
-    我的页
+    我的页: {{str}}
+    <button open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">
+        获取手机号
+    </button>
 </div>
