--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -72,11 +72,11 @@
     position: absolute;
     top: 10px;
     left: 10px;
-    padding: 2px 10px;
+    padding: 1px 7px;
     border-radius: 5px;
     line-height: 28px;
     font-weight: 600;
-    background: rgba(120, 120, 120, .3);
+    background: rgba(120, 120, 120, .4);
 }
 .card .img-container .img-tag::before {
     margin-right: 5px;
@@ -153,12 +153,12 @@
 /* ==== 按钮部分 ==== */
 .btn-container {
     /* background: #48e76b; */
-    flex: 0 0 125px;
+    flex: 0 0 100px;
     justify-content: center;
     text-align: center;
     overflow: hidden;
     flex-direction: row;
-    padding-top: 20px;
+    padding-top: 6px;
     position: relative;
     bottom: -10px;
 }
@@ -167,31 +167,34 @@
     display: inline-flex;
     justify-content: center;
     box-sizing: content-box;
-    width: 85px;
-    height: 85px;
+    vertical-align: top;
+    width: 80px;
+    height: 80px;
     border: 0.5px solid #e4e4e6;
-    border-radius: 85px;
+    border-radius: 80px;
+    font-size: 25px;
     background: #f1f1f1;
 }
 
 .btn-container .btn::before {
     align-self: center;
-    width: 64px;
-    height: 64px;
-    border-radius: 64px;
+    width: 60px;
+    height: 60px;
+    border-radius: 60px;
     background: #fff;
     text-align: center;
-    line-height: 64px;
+    line-height: 60px;
     box-shadow: 1px 1px 5px #d8d8d8;
+    vertical-align: top;
 }
 
-.icon-close {
-    margin-right: 85px;
-    font-size: 30px;
+.btn-container .icon-close {
+    margin-right: 80px;
     color: #e1e1e1;
 }
 
-.icon-handshake {
-    font-size: 40px;
+.btn-container .icon-handshake::before {
+    box-sizing: border-box;
+    font-size: 35px;
     color: #f37737;
 }
