--- a/pages/my-profile/my-profile.wxml
+++ b/pages/my-profile/my-profile.wxml
@@ -1,4 +1,23 @@
 <!--index.wxml-->
-<div class="container your-profile">
-    dd
+<div class="container my-profile">
+    <text class="title">实名认证</text>
+    <text class="content">更好的推荐适合你的知识</text>
+    <input class="input"
+        placeholder="输入你的姓名"
+        bindinput="nameInput"
+        value="{{name}}"
+        auto-focus/>
+    <input
+        class="input"
+        placeholder="输入身份证号码"
+        type="idcard"
+        bindinput="idcardInput"
+        value="{{idcard}}"/>
+    <button
+        class="submit-btn"
+        bindgetphonenumber="submit"
+        disabled="{{disabled}}"
+        bindtap="submit">
+        下一步
+    </button>
 </div>
