--- a/pages/personal-info/personal-info.wxss
+++ b/pages/personal-info/personal-info.wxss
@@ -2,6 +2,7 @@
 .real-name {
     background: #fff;
     text-align: center;
+    padding: 0 50px;
 }
 .title {
     display: block;
@@ -16,9 +17,16 @@
     line-height: 16px;
     color: #999;
 }
+.head-img-placeholder {
+    height: 200px;
+    background: rgba(49, 49, 49, 0.3);
+    text-align: center;
+    font-size: 80px;
+    line-height: 200px;
+}
 .input {
     padding-bottom: 14px;
-    margin: 0 50px 24px;
+    margin: 24px 0;
     border-bottom: 1px solid #e0e0e0;
     text-align: left;
     /* background: #51a938; */
