--- a/pages/search-nearby/search-nearby.wxml
+++ b/pages/search-nearby/search-nearby.wxml
@@ -1,11 +1,13 @@
 <!-- 搜索附近 -->
 <div class="container search-nearby">
-    搜索附近
+    <view class="map">
+        
+    </view>
+    <text class="content">正在查找附近的人...</text>
     <button
         class="submit-btn"
         bindgetphonenumber="submit"
-        disabled="{{disabled}}"
         bindtap="submit">
-        下一步
+        授权地理位置
     </button>
 </div>
