--- a/pages/search-nearby/search-nearby.wxss
+++ b/pages/search-nearby/search-nearby.wxss
@@ -13,6 +13,7 @@
     margin: 20px 5px 15px;
     height: 0;
     line-height: 0;
+    margin-bottom: 20px;
     overflow: hidden;
     padding-bottom: 100%;
     border-radius: 2000px;
@@ -21,10 +22,10 @@
 }
 .content {
     display: block;
-    margin-top: 20px;
-    padding: 0 45px 55px;
+    
+    /* padding: 0 5px; */
     font-size: 16px;
-    line-height: 16px;
+    line-height: 1.5em;
     color: #999;
 }
 .submit-btn {
