调通实名认证数据交互

--- a/pages/personal-info/personal-info.wxml
+++ b/pages/personal-info/personal-info.wxml
@@ -14,7 +14,7 @@
     </image>
     <input class="input"
         placeholder="公司职业"
-        bindinput="professionName"
+        bindinput="careerInput"
         value="{{wxaccount}}"/>
     <input
         class="input"
