--- a/app.wxss
+++ b/app.wxss
@@ -1,7 +1,7 @@
 /**app.wxss**/
 .container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
   box-sizing: border-box;
   background: #f5f5f7;
@@ -9,6 +9,8 @@
 
 section,
 article,
+header,
+footer,
 div {
   display: block;
   text-align: left;
