--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -17,7 +17,7 @@
                 <image class="img" mode="aspectFill" src="{{item.avatar}}"></image>
                 <span class="img-tag iconfont icon-img">1</span>
                 <div class="user-info-container">
-                    <div class="name">{{item.text}}</div>
+                    <div class="name">{{item.nick}}</div>
                     <div class="info">
                         <span>{{item.career}}</span>
                         <span>{{item.distance}}</span>
