--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -58,6 +58,7 @@
 .card .img-container {
     position: relative;
     flex: 1;
+    border-radius: 4px 4px 0 0;
     overflow: hidden;
     background: #999;
     color: #fff;
@@ -101,24 +102,28 @@
 }
 
 .card .img-container .user-info-container .info {
-    border-radius: 5px;
-    background: rgba(120, 120, 120, .5);
+    border-radius: 2px;
+    background: rgba(51, 51, 51, .7);
     display: inline-block;
-    font-size: 20px;
-    line-height: 1em;
-    padding: 4px 10px;
+    font-size: 18px;
+    line-height: 24px;
+    padding: 0 10px;
     margin: 10px 0 20px;
 }
 /* :nth-of-type(n + 2) */
 .card .img-container .user-info-container .info span {
     display: inline-block;
+    font-size: 16px;
+}
+.name {
+  text-shadow: 1px 1px 2px #999;
 }
 .card .img-container .user-info-container .info span:nth-of-type(n + 2)::before {
     content: "\200B";
     display: inline-block;
-    height: 0.15em;
+    height: 0.35em;
     width: 1px;
-    border-bottom: 0.7em solid #fff;
+    border-bottom: 0.7em solid rgba(255, 255, 255, .6);
     margin: 0 0.5em;
 }
 
@@ -140,14 +145,14 @@
 .card .text-container .title {
     color: #000;
     font-weight: 700;
-    font-size: 22px;
+    font-size: 20px;
     margin: 11px 0 5px;
 }
 
 .card .text-container .content {
-    color: #555;
-    font-size: 16px;
-    line-height: 28px;
+    color: #666;
+    font-size: 14px;
+    line-height: 24px;
 }
 
 /* ==== 按钮部分 ==== */
@@ -158,7 +163,7 @@
     text-align: center;
     overflow: hidden;
     flex-direction: row;
-    padding-top: 6px;
+    padding-top: 14px;
     position: relative;
     bottom: -10px;
 }
