--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -8,21 +8,22 @@
     height: 90px;
     margin-top: 80px;
     border-radius: 10px;
+    border: 1px solid #ddd;
 }
 .title {
     display: block;
     border-bottom: .3px solid #e8e7e7;
     padding-bottom: 30px;
-    font-size: 22px;
-    font-weight: 600;
+    font-size: 18px;
+    font-weight: 400;
     text-align: center;
     margin: 0 45px;
 }
 .text-title {
     display: block;
     text-align: left;
-    padding: 25px 45px 10px;
-    font-size: 18px;
+    padding: 25px 40px 10px;
+    font-size: 16px;
     color: #333;
     font-weight: 400;
 }
@@ -30,7 +31,7 @@
     display: block;
     padding: 0 45px;
     text-align: left;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 16px;
     color: #666565;
 }
