--- a/pages/my-knowledge/my-knowledge.wxml
+++ b/pages/my-knowledge/my-knowledge.wxml
@@ -8,7 +8,7 @@
         value="{{title}}"
         auto-focus/>
     <div class="textarea-container">
-        <textarea class="textarea content" bindinput="contentInput" placeholder="想成为哪方面过来人，写出你的经历"/>
+        <textarea class="textarea content" value="{{content}}" bindinput="contentInput" placeholder="想成为哪方面过来人，写出你的经历"/>
         <span class="count">{{count}}/200</span>
     </div>
     <button
