--- a/pages/personal-info/personal-info.wxss
+++ b/pages/personal-info/personal-info.wxss
@@ -17,13 +17,19 @@
     line-height: 16px;
     color: #999;
 }
-.head-img-placeholder {
+.head-img-placeholder{
     height: 200px;
+    width: 100%;
     background: rgba(49, 49, 49, 0.3);
     text-align: center;
     font-size: 80px;
     line-height: 200px;
+} 
+.head-img {
+    height: 200px;
+    width: 100%;
 }
+
 .input {
     padding-bottom: 14px;
     margin: 24px 0;
@@ -34,7 +40,7 @@
 .input-placeholder {
     text-align: left;
     color: #999;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 1em;
     /* background: #999; */
 }
