--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -26,7 +26,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 1px 1px 15px #d8d8d8;
     text-align: center;
     transition: .5s;
@@ -58,7 +58,7 @@
 .card .img-container {
     position: relative;
     flex: 1;
-    border-radius: 4px 4px 0 0;
+    border-radius: 10px 10px 0 0;
     overflow: hidden;
     background: #999;
     color: #fff;
@@ -85,6 +85,43 @@
     font-weight: 400;
     float: left;
 }
+.card .img-container .img-tag-left {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 5px 7px;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 14px;
+    z-index:99;
+    font-weight: 700;
+    color: rgba(243, 119, 55, .8);
+    background: rgba(255, 255, 255, .6);
+}
+.card .img-container .img-tag-left .icon-handshake  {
+    line-height: 28px;
+    font-weight: 600;
+    font-size: 40px;
+}
+.card .img-container .img-tag-right {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 7px;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 14px;
+    z-index:99;
+    font-weight: 700;
+    color: rgba(255, 255, 255, .8);
+    background: rgba(120, 120, 120, .4);
+}
+
+.card .img-container .img-tag-right .icon-close {
+    line-height: 28px;
+    font-weight: 600;
+    font-size: 22px;
+}
 
 .card .img-container .user-info-container {
     position: absolute;
@@ -103,7 +140,7 @@
 
 .card .img-container .user-info-container .info {
     border-radius: 2px;
-    background: rgba(51, 51, 51, .7);
+    background: rgba(51, 51, 51, .8);
     display: inline-block;
     font-size: 18px;
     line-height: 24px;
@@ -116,7 +153,7 @@
     font-size: 16px;
 }
 .name {
-  text-shadow: 1px 1px 2px #999;
+  text-shadow: 1px 1px 2px #666;
 }
 .card .img-container .user-info-container .info span:nth-of-type(n + 2)::before {
     content: "\200B";
@@ -128,31 +165,28 @@
 }
 
 .card .text-container {
+    padding: 20px ;
     flex: 0 0 140px;
     overflow: hidden;
 }
 
-.card .text-container {
-    padding: 30px 44px 24px;
-}
-
 .card .text-container .sub {
-    color: #999;
+    color: #7d7d7d;
     font-size: 14px;
-    line-height: 1em;
+    font-weight: 600;
 }
 
 .card .text-container .title {
     color: #000;
     font-weight: 700;
-    font-size: 20px;
-    margin: 11px 0 5px;
+    font-size: 22px;
+    margin: 3px 0;
 }
 
 .card .text-container .content {
-    color: #666;
-    font-size: 14px;
-    line-height: 24px;
+    color: #8d8d8d;
+    font-size: 16px;
+    line-height: 28px;
 }
 
 /* ==== 按钮部分 ==== */
@@ -165,41 +199,152 @@
     flex-direction: row;
     padding-top: 14px;
     position: relative;
-    bottom: -10px;
+    bottom: -14px;
 }
 
 .btn-container .btn {
+    padding: 14px 0;
     display: inline-flex;
     justify-content: center;
     box-sizing: content-box;
     vertical-align: top;
-    width: 80px;
-    height: 80px;
-    border: 0.5px solid #e4e4e6;
-    border-radius: 80px;
-    font-size: 25px;
-    background: #f1f1f1;
-}
-
-.btn-container .btn::before {
-    align-self: center;
-    width: 60px;
-    height: 60px;
-    border-radius: 60px;
+    height: 34px;
+    line-height: 34px;
     background: #fff;
+}
+
+.btn-container .icon-close2 {
+    display: inline-block;
     text-align: center;
-    line-height: 60px;
-    box-shadow: 1px 1px 5px #d8d8d8;
-    vertical-align: top;
+    width: 28%;
+    background: #fff;
+    color: #f27f46;
+    border-radius: 40px 0 0 40px;
+    font-size: 30px;
+    border-right: 1px solid #eee;
+
 }
 
-.btn-container .icon-close {
-    margin-right: 80px;
-    color: #e1e1e1;
+
+.btn-container .icon-handshake {
+    display: inline-block;
+    width: 20%;
+    text-align: right;
+    color: #f27f46;
+    font-size: 38px;
+}
+.btn-container .icon-tip {
+  display: inline-block;
+  border-radius: 0 40px 40px 0;
+  font-size: 16px;
+  font-weight: 400;
+  color: #f27f46;
+  width: 46%;
+  padding-left: 10px;
 }
 
-.btn-container .icon-handshake::before {
+.match-bg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, .7)
+}
+.match-back {
+    background: #fff;
+    margin: 0 17px;
+    padding: 32px 0;
+    position: relative;
+    top: 40px;
+    border-radius: 4px;
+  
+}
+.match-back .icon-handshake::before {
     box-sizing: border-box;
-    font-size: 35px;
+    font-size: 48px;
     color: #f37737;
+    text-align: center;
+    position: absolute;
+    top: 45px;
+    width: 100%;
+
+}
+.match-bg .match-photos {
+    dis: 0 0 0 100px;
+    justify-content: center;
+    text-align: center;
+    overflow: hidden;
+    flex-direction: row;
+  
+}
+.match-bg .match-img {
+  display:inline-flex;
+  justify-content:center;
+  box-sizing:content-box;
+  vertical-align:top;
+  width:80px;
+  height:80px;
+  border:0.5px solid #e4e4e6;
+  border-radius:80px;
+  font-size:25px;
+  background:#f1f1f1;
+
+}
+.match-bg .title {
+    display: block;
+    padding: 34px 0 18px;
+    font-size: 24px;
+    line-height: 1em;
+    text-align: center;
+    color: #f37737;
+    font-weight: 700;
+}
+.match-bg .content {
+    display: block;
+    font-size: 16px;
+    line-height: 1;
+    color: #999;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+
+.match-left-img {
+   margin-right: 80px;
+}
+
+.submit-btn {
+    margin: 0 45px 20px;
+    color: #fff;
+    border: 0;
+    background: #f37737;
+}
+.submit-btn-continue {
+    margin: 20px 45px;
+    color: #fff;
+    border: 0;
+    background: #f37737;
+}
+.tip {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 34px;
+  z-index: 9999;
+  background:  rgba(254, 236, 201, .9);
+  width: 100%;
+  padding: 0 37px;
+}
+.tip-text {
+  display: inline-block;
+  width: 80%;
+  color: #555;
+  line-height: 34px;
+  font-size: 14px;
+}
+.tip .icon-close1 {
+  color: #555;
+  font-weight: 400;
+  font-size: 16px;
+
 }
