--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,9 +1,13 @@
 /**index.wxss**/
 .mine {
-    padding-bottom: 10px;
+    padding: 20px 17px 10px;
 }
-.image {
+
+
+.head-img {
     width: 100%;
+    height: 340px;
+    overflow: hidden;
 }
 
 /* 卡片 */
@@ -30,7 +34,7 @@
     line-height: 1.5em;
     margin: 0 17px;
     padding: 10px 0;
-    border-bottom: 1px solid #f0f0f0;
+    border-bottom: 1px solid #f1f1f1;
 }
 
 .card-section .content:last-of-type {
@@ -41,4 +45,24 @@
     display: inline-block;
     min-width: 30px;
     color: #999;
+}
+.modifi-btn {
+  color: #f77738;
+  float: right;
+  font-size: 14px;
+}
+.head-img-modify {
+    font-size: 28px;
+    color: #fff;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    padding: 5px 10px 10px;
+    border-radius: 4px;
+    line-height: 18px;
+    background-color: rgba(0, 0, 0, .7)
+}
+.head-img-modify-tip {
+  font-size: 16px;
+  margin-left: 4px;
 }
