--- a/pages/my-knowledge/my-knowledge.wxss
+++ b/pages/my-knowledge/my-knowledge.wxss
@@ -3,35 +3,44 @@
     background: #fff;
     padding: 0 50px;
 }
-.title {
+.tip-content {
     display: block;
-    padding: 42px 0 18px;
-    font-size: 24px;
-    line-height: 1em;
-    text-align: center;
-}
-.content {
-    display: block;
-    padding: 0 45px 55px;
+    padding: 0 15px 55px;
     font-size: 16px;
     line-height: 16px;
     color: #999;
     text-align: center;
 }
+.title {
+    display: block;
+    padding: 22px 0 12px;
+    font-size: 24px;
+    text-align: center;
+    font-weight: 700;
+}
+.content {
+    display: block;
+    padding: 0 15px 55px;
+    font-size: 16px;
+    line-height: 16px;
+    color: #333;
+    text-align: center;
+}
 .input {
-    padding-bottom: 14px;
+    padding-bottom: 2px;
     margin-bottom: 24px;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid #f1f1f1;
     text-align: left;
+    font-size: 16px;
     /* background: #51a938; */
 }
+
 .input-placeholder {
-    text-align: left;
-    color: #999;
-    font-size: 18px;
-    line-height: 1em;
-    /* background: #999; */
+   color: #ccc;
+   font-size: 14px;
+
 }
+
 
 /*==== 文本输入域区块 ====*/
 .textarea-container {
@@ -40,7 +49,7 @@
     width: 100%;
     height: 90px;
     box-sizing: border-box;
-    border: 1px solid #eee;
+    border: 1px solid #f1f1f1;
     padding: 5px 10px;
 }
 .textarea-container .count {
@@ -48,7 +57,7 @@
     right: 10px;
     bottom: 10px;
     font-size: 12px;
-    color: #999;
+    color: #666;
 }
 .textarea {
     display: block;
@@ -58,13 +67,14 @@
     box-sizing: border-box;
     font-size: 14px;
     text-align: left;
-    /* background: #51a938; */
+    line-height: 24px;
 }
+
 .textarea-placeholder {
     text-align: left;
     font-size: 14px;
-    color: #999;
-    background: #00ff00;
+    color: #ccc;
+    line-height: 1em;
 }
 /*==== 提交按钮 ====*/
 .submit-btn {
