--- a/pages/personal-info/personal-info.wxss
+++ b/pages/personal-info/personal-info.wxss
@@ -6,43 +6,59 @@
 }
 .title {
     display: block;
-    padding: 42px 0 18px;
+    padding: 22px 0 12px;
     font-size: 24px;
-    line-height: 1em;
+    font-weight: 700;
 }
 .content {
     display: block;
-    padding: 0 45px 55px;
+    padding: 0 0 22px;
     font-size: 16px;
     line-height: 16px;
     color: #999;
 }
 .head-img-placeholder{
-    height: 200px;
     width: 100%;
     background: rgba(49, 49, 49, 0.3);
+} 
+.head-img {
+   overflow: hidden;
+}
+.head-img image {
+    width: 100%;
+    
+}
+.icon-camera {
     text-align: center;
     font-size: 80px;
     line-height: 200px;
-} 
-.head-img {
-    height: 200px;
-    width: 100%;
-}
 
+   
+}
+.img-upload-tip {
+  width: 100%;
+  display: inline-block;
+  font-size: 16px;
+  text-align: center;
+  float: left;
+  margin-top: -50px;
+}
+.send-content {
+  padding-top: 12px;
+}
 .input {
-    padding-bottom: 14px;
-    margin: 24px 0;
-    border-bottom: 1px solid #e0e0e0;
+    padding-bottom: 2px;
+    margin: 18px 0;
+    border-bottom: 1px solid #f1f1f1;
     text-align: left;
+    font-size: 16px;
     /* background: #51a938; */
 }
 .input-placeholder {
     text-align: left;
-    color: #999;
+    color: #ccc;
     font-size: 14px;
     line-height: 1em;
-    /* background: #999; */
 }
 .submit-btn {
     margin: 45px;
