--- a/pages/real-name/real-name.wxml
+++ b/pages/real-name/real-name.wxml
@@ -2,7 +2,11 @@
 <div class="container real-name">
     <text class="title">实名认证</text>
     <text class="content">更好的推荐适合你的知识</text>
-   
+    <input class="input"
+        placeholder="输入你的真实姓名"
+        bindinput="nameInput"
+        value="{{realname}}"
+        auto-focus/>
     <input
         class="input"
         placeholder="输入身份证号码"
@@ -13,6 +17,7 @@
     <button
         class="submit-btn"
         bindgetphonenumber="submit"
+        disabled="{{disabled}}"
         bindtap="submit">
         下一步
     </button>
