--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -3,21 +3,17 @@
    <div class="tip"  wx:if="{{showTip === true}}">
         <span class="tip-text">左右滑动即可配对交换知识</span>
         <i bindtap="closeTip" class="iconfont icon-close1 "></i>
-       
    </div>
     <section class="card-container">
         <article class="card card-place-holder">
-          {{cardTitle}}
-
+            {{cardTitle}}
         </article>
-         <button
-              wx:if="{{cardTitle === '附近没有更多人了'}}"
-              class="submit-btn-continue"
-              bindtap="onLoad">
-              重新探索
-          </button>  
-       
-        
+        <button
+            wx:if="{{cardTitle === '附近没有更多人了'}}"
+            class="submit-btn-continue"
+            bindtap="onLoad">
+            重新探索
+        </button>  
         <article class="card"
             wx:for="{{slideList}}"
             wx:key="{{item.id}}"
@@ -26,7 +22,6 @@
             bindtouchend="touchend"
             data-token="{{item.token}}"
             bindtouchstart="touchstart">
-
             <header class="img-container">
                 <image class="img" mode="aspectFill" src="{{item.avatar}}"></image>
                 <div class="trans-icon">
@@ -56,35 +51,33 @@
         </article>
     </section>
     <section wx:if="{{slideList.length > 0}}" class="btn-container">
-        <block wx:if="{{!isFinishedInput}}">
+        <block wx:if="{{isFinishedInput}}">
             <div class="btn iconfont icon-close2" id="clickLeft" bindtap="slideLeft"></div>
-            <div class="btn iconfont icon-handshake icon-tip"  bindtap="slideRight">愿意交流经验</div>
+            <div class="btn iconfont icon-handshake icon-exchange"  bindtap="slideRight">愿意交流经验</div>
         </block>
-        <div wx:else class="btn icon-tip btn-only iconfont icon-error" bindtap="slideRight">完善个人信息，即可开始交换</div>
+        <div wx:else class="btn btn-only iconfont icon-error" bindtap="toInputPage">完善个人信息，即可开始交换</div>
     </section>
 </div>
 <section class="match-bg" wx:if="{{followSuccess}}">
-        <div class="match-back" >
-            <div class="match-photos">
-              <image class='match-left-img match-img' src='{{myavatar}}'></image>
-              <image class='match-right-img match-img' src='{{avatar}}'></image>
-            </div>
-            <div class="iconfont icon-handshake "></div>
-
-            <div class="title success-title">恭喜配对成功!</div>
-            <div class="content">你们已经愿意见面交换知识了</div>
-            <button
-                id="contactMatcher"
-                class="submit-btn"
-                bindtap="contactMatcher">
-                联系{{name}}
-            </button>
-            <button
-                id="continueExplore"
-                class="submit-btn-continue"
-                bindtap="continueExplore">
-                继续探索
-            </button>
+    <div class="match-back" >
+        <div class="match-photos">
+            <image class='match-left-img match-img' src='{{myavatar}}'></image>
+            <image class='match-right-img match-img' src='{{avatar}}'></image>
         </div>
-
+        <div class="iconfont icon-handshake "></div>
+        <div class="title success-title">恭喜配对成功!</div>
+        <div class="content">你们已经愿意见面交换知识了</div>
+        <button
+            id="contactMatcher"
+            class="submit-btn"
+            bindtap="contactMatcher">
+            联系{{name}}
+        </button>
+        <button
+            id="continueExplore"
+            class="submit-btn-continue"
+            bindtap="continueExplore">
+            继续探索
+        </button>
+    </div>
   </section>
